2003-10-21  Braden McDaniel  <braden@endoframe.com>

	Replace usage of node::to_<node> with node_cast.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/script.h
	* src/libopenvrml/openvrml/vrml97node.cpp

2003-10-20  Braden McDaniel  <braden@endoframe.com>

	Merged changes from 0.14.2.

	* doc/doxygen-header:  Removed unsightly filename extensions
	from URIs.
	* src/libopenvrml/openvrml/vrml97node.cpp
	(elevation_grid_node::insert_geometry):  Added null checks for
	SFNode fields.
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp:  Fixed crashes
	resulting from size_t carelessness.

2003-10-14  Braden McDaniel  <braden@endoframe.com>

	Generate Doxyfile from configure in order to take advantage of
	PACKAGE_NAME and PACKAGE_VERSION substitutions.

	* configure.ac:  Added doc/Doxyfile to AC_CONFIG_FILES.
	* doc/Doxyfile:  Removed file.
	* doc/Doxyfile.in:  Added file.
	* doc/Makefile.am:  Use Doxfile in the builddir.

2003-10-08  Braden McDaniel  <braden@endoframe.com>

	* configure.ac:  Removed useless checks for zlib, libpng, and
	libjpeg.

2003-10-08  Braden McDaniel  <braden@endoframe.com>

	Moved relocate member function from node to child_node.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/vrml97node.cpp

2003-10-07  Braden McDaniel  <braden@endoframe.com>

	Quelled some warnings from gcc.

	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp

2003-09-30  Braden McDaniel  <braden@endoframe.com>

	Replace field_value_ptr, node_class_ptr, node_type_ptr, and
	scope_ptr with instances of boost::shared_ptr.

	* openvrml.spec.in
	* src/libopenvrml/openvrml/Makefile.am
	* src/libopenvrml/openvrml/Vrml97Parser.cpp